// Copyright 2016 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

syntax = "proto3";
package kwbase.kv.kvserver.storagepb;
option go_package = "storagepb";

import "util/hlc/legacy_timestamp.proto";
import "gogoproto/gogo.proto";

// Liveness holds information about a node's latest heartbeat and epoch.
//
// NOTE: Care must be taken when changing the encoding of this proto
// because it is used as part of conditional put operations. 
message Liveness {
  option (gogoproto.populate) = true;

  int32 node_id = 1 [(gogoproto.customname) = "NodeID",
      (gogoproto.casttype) = "gitee.com/kwbasedb/kwbase/pkg/roachpb.NodeID"];
  // Epoch is a monotonically-increasing value for node liveness. It
  // may be incremented if the liveness record expires (current time
  // is later than the expiration timestamp).
  int64 epoch = 2;
  // The timestamp at which this liveness record expires. The logical part of
  // this timestamp is zero.
  //
  // Note that the clock max offset is not accounted for in any way when this
  // expiration is set. If a checker wants to be extra-optimistic about another
  // node being alive, it can adjust for the max offset. liveness.IsLive()
  // doesn't do that, however. The expectation is that the expiration duration
  // is large in comparison to the max offset, and that nodes heartbeat their
  // liveness records well in advance of this expiration, so the optimism or
  // pessimism of a checker does not matter very much.
  util.hlc.LegacyTimestamp expiration = 3 [(gogoproto.nullable) = false];
  bool draining = 4;
  bool decommissioning = 5;
  bool upgrading = 6;
}

// NodeLivenessStatus describes the status of a node from the perspective of the
// liveness system.
//
// See comment on LivenessStatus() for a description of the states.
enum NodeLivenessStatus {
  UNKNOWN = 0;
  // DEAD indicates the node is considered dead.
  DEAD = 1;
  // UNAVAILABLE indicates that the node is unavailable - it has not updated its
  // liveness record recently enough to be considered live, but has not been
  // unavailable long enough to be considered dead.
  UNAVAILABLE = 2;
  // LIVE indicates a live node.
  LIVE = 3;
  // DECOMMISSIONING indicates a node that is in the decommissioning process.
  DECOMMISSIONING = 4;
  // DECOMMISSIONED indicates a node that has finished the decommissioning
  // process.
  DECOMMISSIONED = 5;
  // UPGRADING indicates a node that is in the upgrading process.
  UPGRADING = 6;
}
